# nrs

./: .gitignore  Cargo.toml  README.md  TIPS_AND_TRICKS.md  build.rs  repomix-output.txt
.husky/: pre-commit
.husky/_/: husky.sh
docs/: API_REFERENCE.md  ARCHITECTURE.md  CONTRIBUTING.md  DOCUMENTATION_UPDATES.md
src/: ai.rs  commands.rs  main.rs  notes.rs  tui.rs  web.rs
static/: graph.html  index.html
static/web/: index.html  require-polyfill.js
static/web/assets/: main-B0x-c8FY.js  main-B0x-c8FY.js.map  main-B_fBobE0.js  main-B_fBobE0.js.map  main-CTrGGlC_.css  main-laxCz6HN.css
web-ui/: README.md  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
web-ui/src/: App.tsx  index.css  main.tsx  types.ts
web-ui/src/components/: Header.tsx  MarkdownRenderer.tsx  NoteCard.tsx
web-ui/src/hooks/: useNotes.ts
web-ui/src/pages/: GraphPage.tsx  HomePage.tsx  NotFoundPage.tsx  NotePage.tsx
web-ui/src/types/: index.ts
