[package]
name = "nrs"
version = "0.3.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
crossterm = "0.26"
ratatui = { version = "0.20", features = ["crossterm"] }
actix-web = "4.3"
actix-files = "0.6.0"
walkdir = "2.3.2"
regex = "1.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
async-openai = "0.10.0"